--- a/lazarov-twins-website/src/components/TrainingPrograms/TrainingPrograms.css
+++ b/lazarov-twins-website/src/components/TrainingPrograms/TrainingPrograms.css
@@ -252,9 +252,14 @@
   flex-wrap: wrap;
   flex-direction: row;
   justify-content: center;
+  align-items: flex-start;
   gap: 2rem;
   padding: 0;
+  width: 100%;
+  box-sizing: border-box;
 }
+
+
 
 /*-----  End of Program Cards Grid  ------*/
 
